kube/commento-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commento
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commento
  template:
    metadata:
      labels:
        app: commento
    spec:
      containers:
      - name: commento
        image: sabayneh/my-custom-commento:v3
        ports:
        - containerPort: 8080  # Ensure this is the port Commento is configured to use
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
