kube/grafana-iam-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-aws-cli
  namespace: monitoring
spec:
  serviceAccountName: grafana-service-account
  containers:
    - name: aws-cli
      image: amazon/aws-cli
      command: ["sh", "-c", "aws cloudwatch list-metrics --region us-east-1 && sleep 3600"]
  restartPolicy: Never
