kube/commento-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: commento
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: commento
  type: ClusterIP
