kube/ghost-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ghost
spec:
  ports:
  - port: 80
    targetPort: 2368
  selector:
    app: ghost
  type: LoadBalancer
