kube/postgress-commento-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-commento
spec:
  ports:
  - port: 5432
  selector:
    app: postgres-commento
