kube/prometheus-externalname-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-server-external
  namespace: default
spec:
  type: ExternalName
  externalName: prometheus-server.monitoring.svc.cluster.local
  ports:
  - port: 9090
