kube/prometheus-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: prometheus-server
  namespace: monitoring
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  selector:
    app: prometheus-server
