kube/ghost-ingress-nodomain.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-apps-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /ghost(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: ghost
            port:
              number: 80
      - path: /commento(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: commento
            port:
              number: 80
      - path: /prometheus(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus-server-external
            port:
              number: 9090
